--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-dvh">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,8 +13,8 @@
     <link rel="manifest" href="/manifest.json" />
     <title>AIdventure</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="h-full">
+    <div id="app" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
